--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,6 +26,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: 'yarn'
       - run: yarn install
+      - run: echo 'BASE_URL="/best-of-2022/"' >> .env
       - run: yarn build
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
